# Point-In-Polygon

./: CMakeLists.txt  PointInPolygon.code-workspace  Readme.md
Assets/Shaders/: default.frag  image.frag  image.vert  line.frag  line.vert  point.frag  point.vert  text.frag  text.vert
src/: PointInPolygon.cpp  PointInPolygon.h
src/Config/: Settings.cpp  Settings.h
src/Graphic/: Renderer.cpp  Renderer.h  color.h  simage.cpp  simage.h
src/Objects/: Button.cpp  Button.h  Image.cpp  Image.h  MouseArea.cpp  MouseArea.h  Object.cpp  Object.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Text.cpp  Text.h
src/Window/: Window.cpp  Window.h
